--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,11 @@
     <color name="colorPrimary">#0a091b</color>
      <color name="colorPrimaryDark">#070716</color>
     <color name="colorAccent">#FF4081</color>
-    
+
+    <color name="white">#fff</color>
+    <color name="grey">#bfbfbf</color>
+    <color name="black">#000000</color>
+
     <color name="bottomText">#6b6b76</color>
 
     <color name="ripple_effect_color">#f816a463</color>
