added the bottom navmenuBar in all activities, missing the list view in the home section

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,8 +32,8 @@
             android:layout_height="match_parent"
             android:id="@+id/relLayout2">
 
-            <!--<include layout="@layout/item_exercise"-->
-                <!--android:id="@+id/relLayout3"/>-->
+            <include layout="@layout/item_exercise"
+                android:id="@+id/relLayout3"/>
 
         </RelativeLayout>
 
