--- a/app/src/main/res/layout/activity_list_exercises.xml
+++ b/app/src/main/res/layout/activity_list_exercises.xml
@@ -3,24 +3,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.arturofilio.arturoconsulting.Model.ListExercises">
 
-    <TextView
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/colorPrimary"
-        android:text="VIEW EXERCISES"
-        android:textSize="24sp"
-        android:textColor="@color/white"
-        android:gravity="center_vertical|center_horizontal"
-        android:id="@+id/title"/>
+        android:layout_height="200dp"
+        app:cardCornerRadius="0dp"
+        app:contentPaddingRight="10dp"
+        app:contentPaddingLeft="10dp">
 
-    <android.support.v7.app.AlertController.RecycleListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list_ex"
-        android:layout_below="@+id/title">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </android.support.v7.app.AlertController.RecycleListView>
+            <ImageView
+                android:id="@+id/exercise_image"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                android:scaleType="centerCrop" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/exercise_name"
+                android:text="Exercise"
+                android:gravity="center_vertical"/>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
