--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        app:layout_constraintTop_toTopOf="@+id/relLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
+        <RelativeLayout
+            app:layout_constraintTop_toTopOf="@+id/relLayout1"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/listView"
+            android:layout_height="wrap_content">
 
-            ></ListView>
+            <ListView
+                android:id="@+id/listView"
+                android:layout_width="match_parent"
+                android:layout_height="727dp"
+                android:clipToPadding="false"/>
 
-        <include layout="@layout/layout_bottom_navigation_view" />
+            <include layout="@layout/layout_bottom_navigation_view"
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_below="@+id/listView"
+                android:layout_alignParentBottom="true"/>
 
+        </RelativeLayout>
 
-    </RelativeLayout>
-
-</android.support.constraint.ConstraintLayout>
+</android.support.design.widget.CoordinatorLayout>
