created settings activity and layout and created login layout, missing activity setup

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
 
     <color name="btnSignIn">#1fbad6</color>
     <color name="btnRegister">#83838c</color>
+
+    <color name="link_blue">#4d94ff</color>
+
 </resources>
