--- a/app/src/main/res/layout/activity_accountsettings.xml
+++ b/app/src/main/res/layout/activity_accountsettings.xml
@@ -14,9 +14,22 @@
             android:layout_height="wrap_content"
             android:id="@id/relLayout2">
 
-
+            <include layout="@layout/snippet_top_accountsettingstoolbar"/>
 
         </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/relLayout3"
+            android:layout_below="@id/relLayout2">
+
+
+            <include layout="@layout/layout_center_accountsettings"/>
+
+        </RelativeLayout>
+
+        <include layout="@layout/layout_bottom_navigation_view"/>
 
     </RelativeLayout>
 
