--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SIGN IN"
+            android:text="REGISTER NEW ACCOUNT"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:gravity="center_horizontal"
@@ -52,6 +52,21 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="Username"
+                android:id="@+id/input_username"/>
+
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="Password"
                 android:id="@+id/input_password"/>
@@ -63,21 +78,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
-            android:text="Login"
-            android:id="@+id/btn_Login"
+            android:text="Register"
+            android:id="@+id/btn_register"
             android:padding="12dp"
             android:background="@drawable/white_rounded_button"
             />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:text="No account yet? Create here"
-            android:gravity="center"
-            android:textSize="16dp"
-            android:id="@+id/link_signup"
-            android:textColor="@color/link_blue"/>
 
     </LinearLayout>
 
