--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,6 +96,7 @@
         android:layout_alignBottom="@+id/progressBar"
         android:layout_alignRight="@+id/progressBar"
         android:layout_alignLeft="@+id/progressBar"
+        android:id="@+id/pleaseWait"
         />
     
 </RelativeLayout>
