--- a/app/src/main/res/layout/circle_recycler_view.xml
+++ b/app/src/main/res/layout/circle_recycler_view.xml
@@ -1,26 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="15dp"
     android:id="@+id/parent_layout">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/image"
-        android:src="@mipmap/ic_launcher"/>
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:cardCornerRadius="0dp"
+        app:contentPaddingRight="10dp"
+        app:contentPaddingLeft="10dp"
+        >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Canada"
-        android:id="@+id/image_name"
-        android:layout_toRightOf="@+id/image"
-        android:textColor="#000"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
-        android:textSize="17sp"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:id="@+id/image"
+            android:alpha=".8"
+            android:tint="#6F000000"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:id="@+id/image_name"
+                android:text="Name"
+                android:paddingLeft="20sp"
+                android:textColor="@color/white"
+                android:gravity="center_vertical"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                />
+
+
+        </LinearLayout>
+
+
+
+    </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
