creating fragments on top of activities in order to reuse the activities more efficiently, created profile fragment

--- a/app/src/main/res/layout/exercise_card.xml
+++ b/app/src/main/res/layout/exercise_card.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.arturofilio.arturoconsulting.Model.ListExercises">
+    tools:context="com.arturofilio.arturoconsulting.Home.ListExercises">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
